--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Homeloancalc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "dev": "nodemon dist/index.js dist/index.js npx tsc --w"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,12 @@
   },
   "homepage": "https://github.com/danielng19971/HomeLoanCalc#readme",
   "devDependencies": {
+    "@types/node": "^20.4.5",
+    "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
