--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js dist/index.js npx tsc --w"
+    "start": "node dist/index.js -r dotenv/config dist/index.js dotenv_config_path=env/prod.env",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,15 @@
   "devDependencies": {
     "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
+    "log4js": "^6.9.1",
+    "zod": "^3.21.4"
   }
 }
