--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "log4js": "^6.9.1",
     "module-alias": "^2.2.3",
     "moment": "^2.29.4",
+    "node-cache": "^5.1.2",
+    "sort-array": "^4.1.5",
     "zod": "^3.21.4"
   }
-  
 }
